--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "desafio-armazenamento-dados",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend do projecto eCommerce do Bootcamp MOZ 2024",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
